<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avaliacao" />

            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/btnPsiPac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psiquiatras" />

            <Button
                android:layout_marginTop="100dp"
                android:id="@+id/btnEstHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horarios" />

            <Button
                android:layout_marginTop="150dp"
                android:id="@+id/btnEstSobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre_o_app" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_marginTop="198dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:elevation="@dimen/cardview_default_elevation"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/azulFundo"
            android:backgroundTint="#FFF"
            app:itemTextColor="#FFF"
            app:menu="@menu/barra_menu" />
    </RelativeLayout>


</LinearLayout>