<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconeSeta"
                android:layout_width="30dp"
                android:layout_height="37dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_seta_horario"
                android:contentDescription="@string/imagem_seta" />


            <TextView
                android:id="@+id/txtHorario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="150dp"
                android:layout_toRightOf="@id/iconeSeta"
                android:gravity="center"
                android:text="@string/txthorario_modelo"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtNomeEstagiario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:text="@string/app_name"
                android:textSize="20sp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>